# Reversi

./: .gitignore  AIPlayer.cpp  Board.cpp  Board.h  CMakeLists.txt  GameLogic.cpp  GameLogic.h  GameManager.cpp  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  RegularGameLogic.cpp  RegularGameLogic.h  RegularGameManager.cpp  changesLog.txt  main.cpp  makefile  test_something.cpp  vcs.xml
Client/include/: RegularGameLogic.h  RegularGameManager.h  RemotePlayerReciver.h  ServerConnector.h
Client/source/: GameLogic.cpp  GameManager.cpp  HumanPlayer.cpp  RegularGameLogic.cpp  RegularGameManager.cpp  RemotePlayerReciver.cpp  RemotePlayerSender.cpp  ServerConnector.cpp
Server/: Server.cpp  Server.h  main.cpp  mainServer.cpp  port_ip.txt
etc/: gitLog.txt  info.txt
exe/: port_ip.txt
include/: AIPlayer.h  Board.h  GameLogic.h  GameManager.h  HumanPlayer.h  Player.h  RegularGameLogic.h  RegularGameManager.h  RemotePlayer.h
source/: AIPlayer.cpp  Board.cpp  GameLogic.cpp  GameManager.cpp  HumanPlayer.cpp  Player.cpp  RegularGameLogic.cpp  RegularGameManager.cpp  RemotePlayer.cpp  main.cpp
src/Client/: makefile
src/Client/include/: AIPlayer.h  GameLogic.h  GameManager.h  HumanPlayer.h  Player.h  RegularGameManager.h  RemotePlayerReciver.h  RemotePlayerSender.h  ServerConnector.h
src/Client/source/: AIPlayer.cpp  Board.cpp  Player.cpp  RegularGameLogic.cpp  RegularGameManager.cpp  RemotePlayerReciver.cpp  ServerConnector.cpp  main.cpp
src/Server/: CloseCommand.cpp  CloseCommand.h  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  GameRoom.cpp  GameRoom.h  GamesHandler.cpp  GamesHandler.h  JoinCommand.cpp  JoinCommand.h  ListCommand.cpp  ListCommand.h  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  Task.h  ThreadPool.cpp  ThreadPool.h  mainServer.cpp  makefile
src/tests/: main_test.cpp  test_AIPlayer.h  test_Board.h  test_HumanPlayer.cpp  test_HumanPlayer.h  test_RegularGameLogic.cpp
src/threadsTEST/: main_threads.cpp
tests/: test_AIPlayer.cpp  test_AIPlayer.h  test_Board.cpp  test_Board.h  test_HumanPlayer.cpp  test_HumanPlayer.h  test_RegularGameLogic.h  test_something.cpp
